--- a/VlimsApp/ClientApp/src/app/modules/authentication/components/Department/add-department.component.html
+++ b/VlimsApp/ClientApp/src/app/modules/authentication/components/Department/add-department.component.html
@@ -47,29 +47,30 @@
                      class="form-control"
                      id="DepartmentCode"
                      name="DepartmentCode"
+                     pattern="[a-zA-Z]+"
                      placeholder="Enter Department Code"
                      maxlength="8"
                      [(ngModel)]="newdept.DepartmentCode" [disabled]="viewMode"
                      required
-                     maxlength="49"
+                     maxlength="9"
            #DepartmentCodeInput="ngModel" />
             <!-- Show validation error message -->
     <div *ngIf="DepartmentCodeInput.invalid && (DepartmentCodeInput.dirty || DepartmentCodeInput.touched)" class="text-danger">
-      Department Code is required
+      Department Code should only contain alphabetic characters.
             </div>
           </div>
           </div>
           <div class="form-group row">
-            <label for="Comments" class="col-sm-2 col-form-label">Comments<span style="color: red; font-weight: bolder;">*</span> </label>
+            <label for="Comments" class="col-sm-2 col-form-label">Comments</label>
             <div class="col-sm-10">
               <textarea class="form-control"
                         id="Comments"
                         name="Comments"
-                        maxlength="250"
+                        maxlength="500"
                         rows="3"
                         placeholder="Comments"
                         [(ngModel)]="newdept.Comments" [disabled]="viewMode"
-                        required 
+                        
                         #commentsCxhvcjInput="ngModel"
                         
                         ></textarea>
