--- a/VlimsApp/ClientApp/src/app/modules/authentication/components/new-plant-registration/new-plant-registration.component.html
+++ b/VlimsApp/ClientApp/src/app/modules/authentication/components/new-plant-registration/new-plant-registration.component.html
@@ -57,7 +57,7 @@
                 [(ngModel)]="adddoc.PlantCode"
                 maxlength="6"
                 required
-                
+                [disabled]="editMode"
                 #plantcodeInput="ngModel"
               />
               <div *ngIf="plantcodeInput.invalid && (plantcodeInput.dirty || plantcodeInput.touched)" class="text-danger">
@@ -65,7 +65,7 @@
                   Please enter only numbers
                 </ng-container>
                 <ng-container *ngIf="plantcodeInput.hasError('required')">
-                  Plant Code is required
+                  Plant Code is required.
                 </ng-container>
               </div>
             </div>
@@ -94,7 +94,7 @@
             </div>
           </div>
           <div class="form-group row">
-            <label for="Comments" class="col-sm-2 col-form-label">Comments<span style="color: red; font-weight: bolder;">*</span> </label>
+            <label for="Comments" class="col-sm-2 col-form-label">Comments </label>
             <div class="col-sm-10">
               <textarea class="form-control"
                         id="Comments"
@@ -103,7 +103,7 @@
                         rows="3"
                         placeholder="Comments"
                         [(ngModel)]="adddoc.Comments" [disabled]="viewMode"
-                        required 
+                         
                         #commentsCxhvcjInput="ngModel"
                         
                         ></textarea>
