--- a/VlimsApp/ClientApp/src/app/modules/authentication/components/register/register.component.html
+++ b/VlimsApp/ClientApp/src/app/modules/authentication/components/register/register.component.html
@@ -36,6 +36,7 @@
                        [(ngModel)]="adduser.FirstName"
                        [disabled]="editMode" 
                        pattern="[A-Za-z ]*"
+                       maxlength="24"
                        required
                        #firstnameInput="ngModel"/>
                 <div *ngIf="firstnameInput.invalid && (firstnameInput.dirty || firstnameInput.touched)" class="text-danger">
@@ -43,7 +44,7 @@
                         First Name is required
                     </ng-container>
                     <ng-container *ngIf="firstnameInput.hasError('pattern')">
-                        First Name cannot contain special characters
+                        First Name cannot contain special characters and numbers.
                     </ng-container>
                 </div>
             </div>
@@ -69,7 +70,7 @@
                       Last Name is required
                   </ng-container>
                   <ng-container *ngIf="lastnameInput.hasError('pattern')">
-                      Last Name cannot contain special characters
+                      Last Name cannot contain special characters and numbers.
                   </ng-container>
               </div>
           </div>
@@ -207,6 +208,7 @@
                        placeholder="Enter Email Id"
                        [(ngModel)]="adduser.EmailId"
                        [disabled]="viewMode" 
+                       maxlength="99"
                        
                        pattern="[a-zA-Z0-9._%+-]+@[a-zA-Z0-9.-]+\.[a-zA-Z]{2,}"
                        #emailidInput="ngModel"/>
