--- a/VlimsApp/ClientApp/src/app/modules/documents/components/add-document-type/add-document-type.component.html
+++ b/VlimsApp/ClientApp/src/app/modules/documents/components/add-document-type/add-document-type.component.html
@@ -59,21 +59,7 @@
                       </div>
             </div>
           </div>
-          <div class="form-group row">
-            <label for="description" class="col-sm-2 col-form-label">Description<span style="color: red; font-weight: bolder;">*</span>  </label>
-            <div class="col-sm-10">
-              <textarea class="form-control"
-                        id="description"
-                        name="Enter Description"
-                        rows="3"
-                        placeholder="Description"
-                        [(ngModel)]="documentType.Description" [disabled]="viewMode" required #DesInput="ngModel" >
-                      </textarea>    
-                      <div *ngIf="DesInput.invalid && (DesInput.dirty || DesInput.touched)" class="text-danger">
-                        Enter Description.
-                      </div>                  
-            </div>
-          </div> 
+          
           <div class="form-group row">
             <label for="department" class="col-sm-2 col-form-label">Assign to Department<span style="color: red; font-weight: bolder;">*</span></label>
             <div class="col-sm-10">
@@ -86,6 +72,22 @@
                   Select Department.
                  </div>
               </div>
+            </div>
+          </div>
+
+          <div class="form-group row">
+            <label for="description" class="col-sm-2 col-form-label">Comments  </label>
+            <div class="col-sm-10">
+              <textarea class="form-control"
+                        id="description"
+                        name="Enter Description"
+                        rows="3"
+                        placeholder="Comments"
+                        [(ngModel)]="documentType.Description" [disabled]="viewMode"  #DesInput="ngModel" >
+                      </textarea>    
+                      <div *ngIf="DesInput.invalid && (DesInput.dirty || DesInput.touched)" class="text-danger">
+                        Give Comments.
+                      </div>                  
             </div>
           </div>
 
