--- a/VlimsApp/ClientApp/src/app/modules/documents/components/assigned/assigned.component.scss
+++ b/VlimsApp/ClientApp/src/app/modules/documents/components/assigned/assigned.component.scss
@@ -1,8 +1,13 @@
 .p-paginator .p-dropdown {    
-    height: unset;
-  }
+  height: unset;
+}
 
-  :host ::ng-deep .p-paginator .p-dropdown {    
-    height: unset;
-    min-width: unset;
-  }
+:host ::ng-deep .p-paginator .p-dropdown {    
+  height: unset;
+  min-width: unset;
+}
+// p-table td {
+//   border: solid 1px #666;
+//   width: 110px;
+//   word-wrap: break-word;
+// }
