--- a/VlimsApp/ClientApp/src/app/modules/authentication/components/Roles/new-role.component.html
+++ b/VlimsApp/ClientApp/src/app/modules/authentication/components/Roles/new-role.component.html
@@ -76,7 +76,7 @@
 
         
           <div class="form-group row">
-            <label for="comments" class="col-sm-2 col-form-label">Comments</label>
+            <label for="comments" class="col-sm-2 col-form-label">Comments<span style="color: red; font-weight: bolder;">*</span></label>
             <div class="col-sm-10">
               <textarea 
                      class="form-control"
@@ -85,8 +85,8 @@
                      rows="3"
                      placeholder="Comments please"
                      [(ngModel)]="addrole.Comments" [disabled]="viewMode"
-                     maxlength="500"
-                     
+                     maxlength="250"
+                     required
                      #commentsInput="ngModel">
                       
                     </textarea>
