--- a/VlimsApp/ClientApp/src/app/modules/authentication/components/securitymgmt/securitymgmt.component.html
+++ b/VlimsApp/ClientApp/src/app/modules/authentication/components/securitymgmt/securitymgmt.component.html
@@ -7,7 +7,7 @@
        
 
 <div class="col d-flex justify-content-between align-items-center">
-  <h4 class="page-title">Security Configuration</h4>
+  <h4 class="page-title">System Configuration</h4>
    
 
       <div class="back-icon" style="margin-right: 10px;">
@@ -29,7 +29,7 @@
           <div class="p-4 bg-white shadow-dark rounded-2">
 
             <div class="form-group row">
-              <label for="minimumuseridlength" class="col-sm-2 col-form-label">Minimum User ID Length<span style="color: red; font-weight: bolder;">*</span></label>
+              <label for="minimumuseridlength" class="col-sm-2 col-form-label">Minimum User Id Length<span style="color: red; font-weight: bolder;">*</span></label>
               <div class="col-sm-10">
                 <input type="text"
                        class="form-control"
@@ -38,7 +38,6 @@
                        placeholder="Enter user Id length"
                        [(ngModel)]="securityType.MinimumUserIdLength" [disabled]="viewMode"
                        required
-                       maxlength="24"
                        #minlengthInput="ngModel" />
                 <div *ngIf="minlengthInput.invalid && (minlengthInput.dirty || minlengthInput.touched)" class="text-danger">
                   Minimum UserID is required
@@ -56,7 +55,6 @@
                        placeholder="Enter Password Length"
                        [(ngModel)]="securityType.MinimumPasswordLength" [disabled]="viewMode"
                        required
-                       maxlength="24"
                        #minpassInput="ngModel" />
                 <div *ngIf="minpassInput.invalid && (minpassInput.dirty || minpassInput.touched)" class="text-danger">
                   Minimum password is required
