--- a/VlimsApp/ClientApp/src/app/modules/authentication/components/changepassword/changepassword.component.html
+++ b/VlimsApp/ClientApp/src/app/modules/authentication/components/changepassword/changepassword.component.html
@@ -10,7 +10,7 @@
         <div class="p-4 bg-white shadow-dark rounded-2">
       <div class="form-group row">
         <label for="currentPassword" class="col-sm-2 col-form-label">Current Password:</label>
-        <div class="col-sm-10">
+        <div class="col-sm-3">
         <input
           type="password"
           id="currentPassword"
@@ -26,7 +26,7 @@
       </div>
       <div class="form-group row">
         <label for="newPassword" class="col-sm-2 col-form-label">New Password:</label>
-        <div class="col-sm-10">
+        <div class="col-sm-3">
         <input
           type="password"
           id="newPassword"
@@ -48,7 +48,7 @@
       </div>
       <div class="form-group row">
         <label for="confirmNewPassword" class="col-sm-2 col-form-label">Confirm New Password:</label>
-        <div class="col-sm-10">
+        <div class="col-sm-3">
         <input
           type="password"
           id="confirmNewPassword"
@@ -78,6 +78,92 @@
             </div>
         </div>
     </form>
+</div>
+
+</div>
+<div class="row p-2" *ngIf="isadmin">
+  <div class="col">
+<form (ngSubmit)="changePasswordOther()" #fm1="ngForm">
+    <div class="p-4 bg-white shadow-dark rounded-2">
+  <div class="form-group row">
+    <label for="currentPassword" class="col-sm-2 col-form-label">Select User:</label>
+    <div class="col-sm-10">
+       <p-dropdown
+              name="UserID"
+              [options]="griddata"
+              [(ngModel)]="otherUser" 
+              optionLabel="UserID" placeholder="Select a User"
+            >
+            </p-dropdown>
+    <!-- <input
+      type="password"
+      id="currentPassword"
+      name="currentPassword"
+      class="form-control"
+      [(ngModel)]="currentPassword"
+      required  #currentPasswordInput="ngModel"
+    />
+    <div *ngIf="currentPasswordInput.invalid && (currentPasswordInput.dirty || currentPasswordInput.touched)" class="text-danger">
+        Current Password is required.
+      </div> -->
+    </div>
+  </div>
+  <div class="form-group row">
+    <label for="newPassword1" class="col-sm-2 col-form-label">New Password:</label>
+    <div class="col-sm-3">
+      <input
+        type="password"
+        id="newPassword1"
+        name="newPassword1"
+        class="form-control"
+        [(ngModel)]="newPassword1"
+        maxlength="12"
+        required
+        #newPassword1Input="ngModel"
+      />
+      <span *ngIf="newPassword1" class="password-complexity">
+        Password complexity:
+        <span [ngClass]="getPasswordComplexityClass(newPassword1)">
+          {{ getPasswordComplexityText(newPassword1) }}
+        </span>
+      </span>
+      <div *ngIf="newPassword1Input.invalid && (newPassword1Input.dirty || newPassword1Input.touched)" class="text-danger">
+        New Password is required.
+      </div>
+    </div>
+  </div>
+  <div class="form-group row">
+    <label for="confirmNewPassword" class="col-sm-2 col-form-label">Confirm New Password:</label>
+    <div class="col-sm-3">
+    <input
+      type="password"
+      id="confirmNewPassword1"
+      name="confirmNewPassword1"
+      class="form-control"
+      [(ngModel)]="confirmNewPassword1" maxlength="12"
+      required #confirmNewPassword1Input="ngModel"
+    />
+    <span *ngIf="confirmNewPassword1" class="password-complexity">
+      Password complexity: 
+      <span [ngClass]="getPasswordComplexityClass(confirmNewPassword1)">
+          {{ getPasswordComplexityText(confirmNewPassword1) }}
+      </span>
+  </span>
+    <div *ngIf="confirmNewPassword1Input.invalid && (confirmNewPassword1Input.dirty || confirmNewPassword1Input.touched)" class="text-danger">
+        Confirm new Password is required.
+      </div>
+    </div>
+  </div>
+    </div>
+    <div class="form-group row my-4">
+        <div class="col-sm-10 offset-sm-2">
+            <button type="button" class="btn btn-outline-secondary mx-2" (click)="onCancel()">
+                Cancel
+              </button>
+  <button type="submit" class="btn btn-primary" [disabled]="!fm1.form.valid">Change Password</button>
+        </div>
+    </div>
+</form>
 </div>
 </div>
 </div>
