--- a/VlimsApp/ClientApp/src/app/modules/documents/components/assigned/assigned.component.html
+++ b/VlimsApp/ClientApp/src/app/modules/documents/components/assigned/assigned.component.html
@@ -1,72 +1,73 @@
 <div class="container-fluid">
-    <div class="row p-2">
-        <div class="col">
-            <div class="d-flex justify-content-between align-items-center">
-                <h4 class="page-title">My Assignments List</h4>
+  <div class="row p-2">
+    <div class="col">
+      <div class="d-flex justify-content-between align-items-center">
+        <h4 class="page-title">My Assignments List</h4>
 
-                <div class="back-icon" style="margin-right: -850px;">
-                    <a href="javascript:void(0);" onclick="history.back();">
-                        <i class="bi bi-arrow-left-circle-fill" style="font-size: 30px;"></i>
-                    </a>
-                </div>
-                
-                <div class="d-flex page-title-actions">
-                    <div class="input-group custom-input-group">
-                        <!-- Magnifying glass icon -->
-                        <span class="input-group-text custom-input-group-text">
-                            <i class="fas fa-search custom-search-icon"></i>
-                        </span>
-                        <input type="text" class="form-control custom-input" pInputText type="text" (input)="templatesTable.filterGlobal($any($event.target)?.value, 'contains')"  placeholder="Search" maxlength="250">
-                    </div>
-                      
-                    
-                </div>
-            </div>
+        <div class="back-icon" style="margin-right: -775px;">
+          <a href="javascript:void(0);" onclick="history.back();">
+            <i class="bi bi-arrow-left-circle-fill" style="font-size: 30px;"></i>
+          </a>
         </div>
+
+
+        <div class="d-flex page-title-actions">
+          <div class="input-group custom-input-group">
+            <!-- Magnifying glass icon -->
+            <span class="input-group-text custom-input-group-text">
+              <i class="fas fa-search custom-search-icon"></i>
+            </span>
+            <input type="text" class="form-control custom-input" pInputText type="text" (input)="templatesTable.filterGlobal($any($event.target)?.value, 'contains')" placeholder="Search" maxlength="250">
+          </div>
+
+
+        </div>
+      </div>
     </div>
-    <div class="row p-2">
-        <div class="col">
-            <div class="p-4 bg-white shadow-dark rounded-2">
-                <p-table #templatesTable
-                [globalFilterFields]="['TaskName']"
+  </div>
+  <div class="row p-2">
+    <div class="col">
+      <div class="p-4 bg-white shadow-dark rounded-2">
+        <p-table #templatesTable
+                 [globalFilterFields]="['TaskName']"
                  [value]="types" tableStyleClass="table table-striped" [rows]="itemsPerPage"
-                [paginator]="true" [totalRecords]="types.length"
-                [rowsPerPageOptions]="rowsPerPageOptions">
-                    <ng-template pTemplate="header">
-                        <tr>
-                            <th>S.No</th>
-                            <th pSortableColumn="TaskType" style="width:20%">Task Type<p-sortIcon field="TaskType"></p-sortIcon></th>
-                            <th pSortableColumn="TaskName" style="width:20%">Document Type<p-sortIcon field="TaskName"></p-sortIcon></th>
-                            <th pSortableColumn="Stage" style="width:10%">Stage<p-sortIcon field="Stage"></p-sortIcon></th>
-                            <!-- <th pSortableColumn="assignedGroup" style="width:15%">Assigned Group <p-sortIcon field="assignedGroup"></p-sortIcon></th> -->
-                            <th pSortableColumn="initiatedBy" style="width:20%">Initiated By<p-sortIcon field="initiatedBy"></p-sortIcon></th>
-                            <th pSortableColumn="InitiatedOn" style="width:200px">Initiated On<p-sortIcon field="InitiatedOn"></p-sortIcon></th>
-                            <th pSortableColumn="Status" style="width:200px">Status<p-sortIcon field="Status"></p-sortIcon></th>
-                            <th pSortableColumn="InitiatedOn" style="width:200px">Due Date<p-sortIcon field="InitiatedOn"></p-sortIcon></th>
-    
-                        </tr>
-                    </ng-template>
-                    <ng-template pTemplate="body" let-assigned let-i="rowIndex">
-                        <tr>  
-                            <td>{{ i + 1 }}</td>  
-                             <td *ngIf="access">
-                                <a href="javascript:void(0)" (click)="viewtask(assigned)">{{ assigned.TaskType }}</a>
-                            </td> 
-                           <td *ngIf="!access">Restricted</td>
-                            <td>{{assigned.TaskName}}</td>
-                            <td>{{assigned.Stage}}</td>
-                            <!-- <td>{{assigned.assignedGroup}}</td> -->
-                            <td>{{assigned.InitiatedBy}}</td>
-                            <td>{{assigned.InitiatedOn}}</td>
-                            <!-- <td>{{assigned.status}}</td> -->
-                            <td><span class="status" [ngClass]="getStatusClass(assigned.Status)">{{assigned.Status}}</span></td>
-                            <td>{{assigned.InitiatedOn}}</td>
-                        </tr>
-                    </ng-template>
-                </p-table>
-            </div>
-        </div>
+                 [paginator]="true" [totalRecords]="types.length"
+                 [rowsPerPageOptions]="rowsPerPageOptions">
+          <ng-template pTemplate="header">
+            <tr>
+              <th>S.No</th>
+              <th pSortableColumn="TaskType" style="width:20%">Task Type<p-sortIcon field="TaskType"></p-sortIcon></th>
+              <th pSortableColumn="TaskName" style="width:20%">Document Type<p-sortIcon field="TaskName"></p-sortIcon></th>
+              <!-- <th pSortableColumn="Stage" style="width:10%">Stage<p-sortIcon field="Stage"></p-sortIcon></th> -->
+              <!-- <th pSortableColumn="assignedGroup" style="width:15%">Assigned Group <p-sortIcon field="assignedGroup"></p-sortIcon></th> -->
+              <th pSortableColumn="initiatedBy" style="width:20%">Initiated By<p-sortIcon field="initiatedBy"></p-sortIcon></th>
+              <th pSortableColumn="InitiatedOn" style="width:200px">Initiated On<p-sortIcon field="InitiatedOn"></p-sortIcon></th>
+              <th pSortableColumn="Status" style="width:200px">Status<p-sortIcon field="Status"></p-sortIcon></th>
+              <!-- <th pSortableColumn="InitiatedOn" style="width:200px">Due Date<p-sortIcon field="InitiatedOn"></p-sortIcon></th> -->
+
+            </tr>
+          </ng-template>
+          <ng-template pTemplate="body" let-assigned let-i="rowIndex">
+            <tr>
+              <td>{{ i + 1 }}</td>
+              <td *ngIf="access">
+                <a href="javascript:void(0)" (click)="viewtask(assigned)">{{ assigned.TaskType }}</a>
+              </td>
+              <td *ngIf="!access">Restricted</td>
+              <td>{{assigned.TaskName}}</td>
+              <!-- <td>{{assigned.Stage}}</td> -->
+              <!-- <td>{{assigned.assignedGroup}}</td> -->
+              <td>{{assigned.InitiatedBy}}</td>
+              <td>{{assigned.InitiatedOn}}</td>
+              <!-- <td>{{assigned.status}}</td> -->
+              <td><span class="status" [ngClass]="getStatusClass(assigned.Status)">{{assigned.Status}}</span></td>
+              <!-- <td>{{assigned.InitiatedOn}}</td> -->
+            </tr>
+          </ng-template>
+        </p-table>
+      </div>
     </div>
+  </div>
 </div>
 
 
@@ -77,36 +78,37 @@
 
 
 <style>
-    /* Styles for .custom-input-group */
-    .custom-input-group {
-        background-color: white;
-        display: flex;
-        align-items: center;
-        border: 1px solid #ccc;
-        border-radius: 5px;
-    }
-    .custom-input-group-text {
-            background: white;
-            border: none;
-            padding: 0;
-            vertical-align: middle;
-        }
+  /* Styles for .custom-input-group */
+  .custom-input-group {
+    background-color: white;
+    display: flex;
+    align-items: center;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+  }
 
-        .custom-search-icon {
-            font-size: 14px;
-            margin-right: 5px;
-            margin-left: 9px;
-            color: #555;
-        }
+  .custom-input-group-text {
+    background: white;
+    border: none;
+    padding: 0;
+    vertical-align: middle;
+  }
 
-        .custom-input {
-            border: none;
-            padding: 5px;
-            vertical-align: middle;
-            background-color: white;
-            box-shadow: none;
-        }
-    </style>
+  .custom-search-icon {
+    font-size: 14px;
+    margin-right: 5px;
+    margin-left: 9px;
+    color: #555;
+  }
+
+  .custom-input {
+    border: none;
+    padding: 5px;
+    vertical-align: middle;
+    background-color: white;
+    box-shadow: none;
+  }
+</style>
 
 
 
